--- a/Introdução a criação de websites com HTML5 e CSS3/index.html
+++ b/Introdução a criação de websites com HTML5 e CSS3/index.html
@@ -47,8 +47,7 @@
       </article>
     </section>
     <footer>
-      <ul>
-        <a>Lista</a>
+      <ul class="contact_list">
         <li>
           <a href="mailto:email@mail.com">Email</a>
         </li>
